<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/myLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/permissionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with_your_permission"
                android:textSize="20sp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/permissionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_understand"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:src="@drawable/ic_baseline_add_24_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:contentDescription="@string/submit"
        android:layout_margin="16dp" />
</RelativeLayout>
